starting virtual memory

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,8 @@
 % \input{Sections/raft/raft}
 % \input{Sections/crash/crash.tex}
 % \input{Sections/consist/consist.tex}
-\input{Sections/trans/trans.tex}
+% \input{Sections/trans/trans.tex}
+\input{Sections/virt/virt.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
