--- a/refs.bib
+++ b/refs.bib
@@ -40,3 +40,11 @@
   institution  = {Carnegie Mellon University},
   url          = {https://15721.courses.cs.cmu.edu/spring2018/notes/04-occ.pdf}
 }
+
+@online{virtualmemory2023,
+  author = {Computerphile},
+  title  = {But, what is Virtual Memory?},
+  year   = {2023},
+  url    = {https://www.youtube.com/watch?v=A9WLYbE0p-I},
+  note   = {Accessed: 2025-04-18}
+}
