--- a/refs.bib
+++ b/refs.bib
@@ -58,3 +58,20 @@
   url    = {https://youtu.be/Z4kSOv49GNc},
   note   = {Accessed: 2025-04-19}
 }
+
+@misc{69017,
+  title        = {calculate the effective (average) access time (E AT) of this system},
+  author       = {Ritwik (https://cs.stackexchange.com/users/58645/ritwik)},
+  howpublished = {Computer Science Stack Exchange},
+  note         = {URL:https://cs.stackexchange.com/q/69017 (version: 2019-04-27)},
+  eprint       = {https://cs.stackexchange.com/q/69017},
+  url          = {https://cs.stackexchange.com/q/69017}
+}
+
+@misc{amir2003multilevel,
+  author       = {Yair Amir},
+  title        = {Performance of Multilevel Paging},
+  howpublished = {\url{https://www.cs.jhu.edu/~yairamir/cs418/os5/sld035.htm}},
+  year         = {2003},
+  note         = {Slide 35, Operating Systems Course (CS 418), Johns Hopkins University}
+}
