basic idea of treadmarks down

--- a/Sections/virt/virt.tex
+++ b/Sections/virt/virt.tex
@@ -1,4 +1,6 @@
 \section{Virtual Memory*}
+
+\label{sec:virt}
 \subsection{Problem Space}
 \noindent
 \underline{\textbf{One may skip this section}} if they are already familiar with pages, or have reached the section detailing TLBs. The 
