--- a/Sections/consist/consist.tex
+++ b/Sections/consist/consist.tex
@@ -197,6 +197,7 @@ Consider the following theorem:
 \end{theo}
 
 \subsection{Handling Shared Data via Mutex: Release \& Lazy-release Consistency}
+\label{sec:rel}
 
 \noindent
 Consider the following \textbf{Weak} methods of handling shared data:
