--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,8 @@
 \mbox{}
 \vfill
 \begin{center}
-    \Large{Big thanks to \textbf{Professor Ioannis Liagouris}}\\
-    and \textbf{Dr. Anna Arpaci-Dusseau} 
+    \Large{Big thanks to \textbf{Prof. Anna Arpaci-Dusseau}}\\
+    and  \textbf{Prof. Ioannis Liagouris}
     \normalsize 
     for teaching CS351: Distributed Systems\\
     at Boston University \cite{liagouris_cs351}.\\
@@ -67,7 +67,8 @@
 % \input{Sections/consist/consist.tex}
 % \input{Sections/trans/trans.tex}
 % \input{Sections/virt/virt.tex}
-\input{Sections/shared/shared.tex}
+% \input{Sections/shared/shared.tex}
+\input{Sections/shard/shard.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
