--- a/refs.bib
+++ b/refs.bib
@@ -75,3 +75,12 @@
   year         = {2003},
   note         = {Slide 35, Operating Systems Course (CS 418), Johns Hopkins University}
 }
+
+@misc{RoughgardenValiant2024CS168L1,
+  author       = {Tim Roughgarden and Gregory Valiant},
+  title        = {{CS168: The Modern Algorithmic Toolbox, Lecture \#1: Introduction and Consistent Hashing}},
+  year         = {2024},
+  month        = apr,
+  howpublished = {Lecture notes, Stanford University},
+  url          = {https://web.stanford.edu/class/cs168/l/l1.pdf}
+}
