--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,8 @@
 % \input{Sections/trans/trans.tex}
 % \input{Sections/virt/virt.tex}
 % \input{Sections/shared/shared.tex}
-\input{Sections/shard/shard.tex}
+% \input{Sections/shard/shard.tex}
+\input{Sections/mapreduce/mapreduce.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
