--- a/Sections/trans/trans.tex
+++ b/Sections/trans/trans.tex
@@ -167,7 +167,7 @@ We introduce another method to help us with this problem, though it \textbf{does
 
 \begin{Def}[Two-Phase Commit (2PC)]
 
-    \textbf{Two-Phase Commit (2PC)} ensures \textbf{atomicity}.
+    \underline{\textbf{Two-Phase Commit (2PC)} ensures \textbf{atomicity}.}
     The client sends the transactions to the DBs (participants). There after, the client tells the TC start the commit process, involving two phases:
     
     \begin{itemize}
