--- a/main.tex
+++ b/main.tex
@@ -64,12 +64,12 @@
 
 % \input{Sections/raft/raft}
 % \input{Sections/crash/crash.tex}
-% \input{Sections/consist/consist.tex}
-% \input{Sections/trans/trans.tex}
+\input{Sections/consist/consist.tex}
+\input{Sections/trans/trans.tex}
 % \input{Sections/virt/virt.tex}
 % \input{Sections/shared/shared.tex}
 % \input{Sections/shard/shard.tex}
-\input{Sections/mapreduce/mapreduce.tex}
+% \input{Sections/mapreduce/mapreduce.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
