outline for handling locks finished

--- a/Sections/consist/consist.tex
+++ b/Sections/consist/consist.tex
@@ -356,7 +356,7 @@ To emphasize:
     The following implications hold among consistency models:
 
     \begin{center}
-        linearizability $\rightarrow$ sequential $\rightarrow$ causal $\rightarrow$ read-your-writes $\rightarrow$ FIFO $\rightarrow$ eventual
+        linearizability $\rightarrow$ sequential $\rightarrow$ causal $\rightarrow$ (RYW/FIFO)
     \end{center}
 \end{theo}
 
