--- a/Sections/shard/shard.tex
+++ b/Sections/shard/shard.tex
@@ -17,7 +17,7 @@ Say we have a 1 TB dataset with only 5 servers each with 200 GB of storage.
 Once method is to split up our dataset into 5 partitions, and distribute them across the servers.
 \begin{Def}[Sharding]
 
-    \textbf{Sharding} is the process of splitting up a dataset into smaller, more manageable pieces called \textbf{shards}. Each shard is stored on a different server, allowing for parallel processing.\\
+    \textbf{Sharding} is the process of splitting up a dataset into smaller more manageable pieces called \textbf{shards}. Each shard is stored on a different server, allowing for parallel processing.\\
 
     \noindent
     In addition, to strengthen fault tolerance, replication could be used to store multiple copies of a single shard on different servers.
