--- a/main.tex
+++ b/main.tex
@@ -52,24 +52,27 @@
     \chapter*{Prerequisites}
     \input{Sections/pre}
     
-\chapter{Introduction}
-\input{Sections/high/high}
-\input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
-\input{Sections/time/time}
-\input{Sections/imp_rpc/imp.tex}
-\chapter{Working with Distributed Systems}
-\input{Sections/snap/snap}
-\input{Sections/rep/rep}
+% \chapter{Introduction}
+% \input{Sections/high/high}
+% \input{Sections/rpc/rpc}
+% \input{Sections/rpc_2/rpc_2}
+% \input{Sections/time/time}
+% \input{Sections/imp_rpc/imp.tex}
 
-\input{Sections/raft/raft}
-\input{Sections/crash/crash.tex}
-\input{Sections/consist/consist.tex}
-\input{Sections/trans/trans.tex}
-\input{Sections/virt/virt.tex}
-\input{Sections/shared/shared.tex}
-\input{Sections/shard/shard.tex}
-\input{Sections/mapreduce/mapreduce.tex}
+
+% \chapter{Working with Distributed Systems}
+% \input{Sections/snap/snap}
+% \input{Sections/rep/rep}
+
+% \input{Sections/raft/raft}
+% \input{Sections/crash/crash.tex}
+% \input{Sections/consist/consist.tex}
+% \input{Sections/trans/trans.tex}
+% \input{Sections/virt/virt.tex}
+% \input{Sections/shared/shared.tex}
+% \input{Sections/shard/shard.tex}
+% \input{Sections/mapreduce/mapreduce.tex}
+\input{Sections/gfs/gfs.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
