dynamo up to hinted-handoff

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,8 @@
 % \input{Sections/shared/shared.tex}
 % \input{Sections/shard/shard.tex}
 % \input{Sections/mapreduce/mapreduce.tex}
-\input{Sections/gfs/gfs.tex}
+% \input{Sections/gfs/gfs.tex}
+\input{Sections/dyn/dyn.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
